added support for local photo editing more options to follow

--- a/frontend-app/src/html/help.html
+++ b/frontend-app/src/html/help.html
@@ -59,6 +59,21 @@
                         <a class="navbar-brand js-scroll-trigger" href="index.html">
                             face detect
                         </a>
+                        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+                            aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                            Menu
+                            <i class="fa fa-bars"></i>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarResponsive">
+                            <ul class="navbar-nav ml-auto">
+                                <li class="nav-item">
+                                    <a class="nav-link" href="index.html">Edit</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link active" href="login.html">Detect</a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </nav>
             </div>
