figuring out convolution

--- a/frontend-app/src/html/index.html
+++ b/frontend-app/src/html/index.html
@@ -210,7 +210,7 @@
                 <br/>
                 <br/>
                 <div id="histogramcollapse">
-                    <div id="histogram" style="width: 600px;height:400px;"></div>
+                    <div id="histogram" style="width: 80%;height:30em;"></div>
                 </div>
             </div>
         </main>
