added filters and a working hw6 first part. will work on histogram normalization soon

--- a/frontend-app/src/html/index.html
+++ b/frontend-app/src/html/index.html
@@ -168,6 +168,14 @@
                 <select class="selectpicker filterSelect" data-live-search="true" id="filterSelect">
                     <option data-tokens="none" value="">none</option>
                     <option data-tokens="grayscale" value="grayscale">grayscale</option>
+                    <option data-tokens="smoothing" value="smoothing3x3">smoothing</option>
+                    <option data-tokens="sharpening" value="laplacian">sharpening</option>
+                    <option data-tokens="sharpening 2" value="compositelaplacian">sharpening 2</option>
+                    <option data-tokens="point detect" value="pointdetect">point detect</option>,
+                    <option data-tokens="horizontal line detect" value="horizontallinedetect">horizontal line detect</option>,
+                    <option data-tokens="vertical line detect" value="verticallinedetect">vertical line detect</option>,
+                    <option data-tokens="45 line detect" value="linedetect45">45 line detect</option>
+                    <option data-tokens="-45 line detect" value="linedetect325">-45 line detect</option>
                 </select>
                 <br />
                 <div id="nofilterwarning">
